@@ -80,8 +80,8 @@ phonemgr_object_emit_battery_state_changed (PhonemgrObject *o, guint index, guin
 		       0, index, percentage, on_ac);
 }
 
-void
-phonemgr_object_coldplug (PhonemgrObject *o)
+gboolean
+phonemgr_object_coldplug (PhonemgrObject *o, GError **error)
 {
 	if (o->num_batteries == 0) {
 		g_signal_emit (G_OBJECT (o),
@@ -92,6 +92,7 @@ phonemgr_object_coldplug (PhonemgrObject *o)
 			       phonemgr_object_signals[BATTERY_STATE_CHANGED],
 			       0, 0, o->percentage, o->on_ac);
 	}
+	return TRUE;
 }
 
 static gboolean
